# horrocrux

./: .gitignore  Dockerfile  README.md  plugins-api.md  plugins.md  project_generator.py  pyproject.toml  requirements.txt
apps/configs/: mapa_variables.py
apps/models/: generador.py  menu.py  plugin.py  yeoman.py
apps/utils/: commons.py  logger_util.py  system_util.py
docker/: run_dockerized.sh
files/generators/: configuracion.json
files/plugins/base/: configuracion.json
files/plugins/base/proyecto/: Dockerfile  README.md
files/plugins/repository-binder/: index.py
files/plugins/variables/: configuracion.json
scripts/: entrypoint.sh
scripts/docker/: ambiente.sh
scripts/git/: set_next_tag_by_branch.sh
scripts/pipy/: build.sh
src/horrocrux/configs/: configuration.py  error_handlers.py  vars.py
src/horrocrux/models/: app_model.py  exception.py  generador.py  menu.py  plugin.py  yeoman.py
src/horrocrux/utils/: commons.py  logger_util.py
