[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "horrocrux"
version = "0.0.4"
authors = [
  { name="alexiscaspell", email="alexiscaspell@gmail.com" },
]
description = "Project generation tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alexiscaspell/horrocrux"
"Bug Tracker" = "https://github.com/alexiscaspell/horrocrux/issues"